--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td>
           <form ng-submit="makeSearch()">
-            <input type="text" placeholder="Your id" ng-model="userData.userId" pattern="^[0-9]+$" required ng-change="updateUser();" ng-model-options="{ debounce: { default: 1000 } }"><br>
+            <input type="text" placeholder="Ваш id" ng-model="userData.userId" pattern="^[0-9]+$" required ng-change="updateUser();" ng-model-options="{ debounce: { default: 1000 } }"><br>
             <div class="container labels">
               <label for="rd1"><input type="radio" id="rd1" name="rd1" ng-model="peopleFilterData.sex" value="1"><span></span>Женский</label><br>
               <label for="rd2"><input type="radio" id="rd2" name="rd1" ng-model="peopleFilterData.sex" value="2"><span></span>Мужской</label><br>
@@ -36,12 +36,14 @@
       </tr>
       <tr>
         <td id="td3">
-          <div class="user-found" ng-repeat="user in usersFound | peopleFilter:peopleFilterData">
+          <a ng-click="scrollingIndexesChange('up');">Вверх</a>
+          <div class="user-found" ng-repeat="user in usersFound | peopleFilter:peopleFilterData | indexFilter:scrollingIndexes">
             <a ng-href="http://vk.com/id{{user.uid}}">
               <img ng-src="{{user.photo_200}}">
               {{user.first_name}} {{user.last_name}}
             </a>
           </div>
+          <a ng-click="scrollingIndexesChange('up');">Вниз</a>
         </td>
       </tr>
     </table>
