--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td>
           <form ng-submit="makeSearch()">
-            <input type="text" placeholder="Ваш id" ng-model="userData.userId" pattern="^[0-9]+$" required ng-change="updateUser();" ng-model-options="{ debounce: { default: 1000 } }"><br>
+            <input type="text" placeholder="Ваш id" ng-model="userData.userId" pattern="^[0-9]+$" required ng-change="updateUser();" ><br>
             <div class="container labels">
               <label for="rd1"><input type="radio" id="rd1" name="rd1" ng-model="peopleFilterData.sex" value="1"><span></span>Женский</label><br>
               <label for="rd2"><input type="radio" id="rd2" name="rd1" ng-model="peopleFilterData.sex" value="2"><span></span>Мужской</label><br>
