--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <div id="debug" data-toggle-key="hidden">
     <ul>
       <li>
-        $scope.userData.userId - {{$scope.userData.userId}}
+        $scope.userData.userId - {{userData.userId}}
       </li>
       <li>
-        $scope.searchByThisPublic - {{$scope.searchByThisPublic}}
+        $scope.searchByThisPublic - {{searchByThisPublic}}
       </li>
       <li>
-        $scope.usersFound.length - {{$scope.usersFound.length}}
+        $scope.usersFound.length - {{usersFound.length}}
       </li>
       <li>
-        $scope.scrollingIndexes - {{$scope.scrollingIndexes[0]}} {{$scope.scrollingIndexes[1]}}
+        $scope.scrollingIndexes - {{scrollingIndexes[0]}} {{scrollingIndexes[1]}}
       </li>
     </ul>
   </div>
