--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         $scope.userData.userId - {{userData.userId}}
       </li>
       <li>
+        $scope.userData.userSubscriptions.length - {{userData.userSubscriptions.length}}
+      </li>
+      <li>
         $scope.searchByThisPublic - {{searchByThisPublic}}
       </li>
       <li>
