--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <tr>
         <td id="td3">
           <span>Найдено: {{usersFilteredAmount}}</span><br>
-          <div class="user-found" ng-repeat="user in usersFound | peopleFilter:peopleFilterData:usersFilteredAmount | indexFilter:scrollingIndex">
+          <div class="user-found" ng-repeat="user in usersFound | peopleFilter:peopleFilterData:usersFilteredAmount | limitTo: usersLimit">
             <a ng-href="http://vk.com/id{{user.uid}}">
               <img ng-src="{{user.photo_200}}">
               {{user.first_name}} {{user.last_name}}
