Added cities filter code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" defer></script>
+  <script src="js/filters.js" defer></script>
   <script src="js/ang.js" defer></script>
   <script src="js/script.js" defer></script>
   <link rel="stylesheet" href="css/style.css">
@@ -26,6 +27,9 @@
       </li>
       <li>
         $scope.scrollingIndex - {{scrollingIndex}}
+      </li>
+      <li>
+        $scope.peopleFilterData.city - {{peopleFilterData.city}}
       </li>
     </ul>
   </div>
