--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
           </div>
           <span>Найдено: {{filtered.length}}</span><br>
-          <div class="user-found" ng-repeat="user in filtered = (usersFound | peopleFilter:peopleFilterData | limitTo: usersLimit)">
+          <div class="user-found" ng-repeat="user in (filtered = (usersFound | peopleFilter:peopleFilterData)) | limitTo: usersLimit">
             <a ng-href="http://vk.com/id{{user.uid}}">
               <img ng-src="{{user.photo_200}}">
               {{user.first_name}} {{user.last_name}}
