--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         $scope.userData.userSubscriptions.length - {{userData.userSubscriptions.length}}
       </li>
       <li>
-        $scope.searchByThisPublic - {{searchByThisPublic}}
+        $scope.searchByThisPublic.id - {{searchByThisPublic.id}}
       </li>
       <li>
         $scope.usersFound.length - {{usersFound.length}}
@@ -41,7 +41,7 @@
             <input type="text" placeholder="Ваш id" ng-model="userData.userId" pattern="^[0-9]+$" required ng-change="updateUser();"><br>
             <div class="justify">
                 <div class="select" data-toggle="select-open" data-select>
-                  <span>{{searchByThisPublic}}</span>
+                  <span>{{searchByThisPublic.name}}</span>
                   <ul>
                     <li ng-repeat="public in userData.userSubscriptions" ng-click="changeSearchPublic($index)">{{public.name}}</li>
                   </ul>
@@ -74,7 +74,7 @@
                 <li ng-repeat="city in cities.citiesList" ng-click="changeSearchCity($index)">{{city.title}}</li>
               </ul>
             </div>
-            
+
           </div>
           <span>Найдено: {{filtered.length}}</span><br>
           <div class="user-found" ng-repeat="user in (filtered = (usersFound | peopleFilter:peopleFilterData)) | limitTo: usersLimit">
