--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
               </div>
             </div>
-            <a ng-click="addPublic()" ng-show="">Добавить паблик</a>
+            <a ng-click="addPublic()">Добавить паблик</a>
             <input type="submit" value="Поиск" class="red-submit">
           </form>
         </td>
